--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </label>
         <select name="skill" id="hitting-skill">
             <option value="">--Capacité de tir ou de combat--</option>
+            <option value="1">Touche automatique</option>
             <option value="2">2+</option>
             <option value="3">3+</option>
             <option value="4">4+</option>
@@ -67,6 +68,20 @@
                 <label for="fullRerollWound">Full reroll</label>
             </div>
         </fieldset>
+        <label for="toughness">
+            Endurance de la cible
+        </label>
+        <select name="toughness" id="toughness">
+            <option value="">--Endurance de la cible--</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+        </select>
     </form>
 </body>
 </html>
