--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <label for="fullRerollWound">Full reroll</label>
             </div>
         </fieldset>
-        <label for="toughness">
+        <label for="toughnessTarget">
             Endurance de la cible
         </label>
-        <select name="toughness" id="toughness">
+        <select name="toughnessTarget" id="toughnessTarget">
             <option value="">--Endurance de la cible--</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -81,6 +81,39 @@
             <option value="7">7</option>
             <option value="8">8</option>
             <option value="9">9</option>
+        </select>
+        <label for="normalSaveTarget">
+            Sauvegarde de la cible
+        </label>
+        <select name="normalSaveTarget" id="normalSaveTarget">
+            <option value="">Sauvegarde de la cible</option>
+            <option value="2">2+</option>
+            <option value="3">3+</option>
+            <option value="4">4+</option>
+            <option value="5">5+</option>
+            <option value="6">6+</option>
+        </select>
+        <label for="invulnerableSaveTarget">
+            Sauvegarde invulnérable de la cible
+        </label>
+        <select name="invulnerableSaveTarget" id="invulnerableSaveTarget">
+            <option value="">Sauvegarde invulnérable de la cible</option>
+            <option value="2">2++</option>
+            <option value="3">3++</option>
+            <option value="4">4++</option>
+            <option value="5">5++</option>
+            <option value="6">6++</option>
+        </select>
+        <label for="feelNoPain">
+            Insensible à la douleur
+        </label>
+        <select name="feelNoPain" id="feelNoPain">
+            <option value="">Insensible à la douleur</option>
+            <option value="2">2++</option>
+            <option value="3">3++</option>
+            <option value="4">4++</option>
+            <option value="5">5++</option>
+            <option value="6">6++</option>
         </select>
     </form>
 </body>
